--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ analytics:
 # Site Author
 author:
   name             : "Povilas Staškus"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "https://avatars0.githubusercontent.com/u/4062343?s=460&v=4"
   bio              : "iOS Developer"
   location         : "Vilnius, Lithuania"
   email            : "povilas@staskus.io"
